Fixed alignment of status bar

--- a/styles/options.less
+++ b/styles/options.less
@@ -16,7 +16,7 @@ body {
 	   border-bottom: 4px solid @primary;
 	}
 	.inner-wrapper {
-		margin: 40px 0 0 0;
+		margin: 25px 0 0 0;
     .status-text {
       color:@primary;
       width: 100%;
@@ -24,7 +24,7 @@ body {
       transition:opacity 0.6s;
       opacity: 0;
       padding-left: 45px;
-      margin-top: 30px;
+      margin-top: 0;
       font-size: 18px;
       &.visible {
         opacity: 1;
@@ -71,6 +71,12 @@ body {
     .extension-link {
         color:@primary;
         font-size: 18px;
+    }
+
+    .buttons {
+      .button-cell{
+        text-align: center;
+      }
     }
 	}
 }
